@@ -647,10 +647,15 @@ static int CreateWorker(
 	}
 	ithread_attr_init(&attr);
 	ithread_attr_setstacksize(&attr, tp->attr.stackSize);
+	ithread_attr_setdetachstate(&attr, ITHREAD_CREATE_DETACHED);
 	rc = ithread_create(&temp, &attr, WorkerThread, tp);
 	ithread_attr_destroy(&attr);
 	if (rc == 0) {
 		rc = ithread_detach(temp);
+		/* ithread_detach will return EINVAL if thread has been
+		 successfully detached by ithread_create */
+		if (rc == EINVAL)
+			rc = 0;
 		tp->pendingWorkerThreadStart = 1;
 		/* wait until the new worker thread starts */
 		while (tp->pendingWorkerThreadStart) {
